Fixing mouse over and alignment issues.

--- a/simplepicker.css
+++ b/simplepicker.css
@@ -17,34 +17,11 @@
 }
 
 .wrapper {
-    /* display: flex;
-    width: 100%;
-    flex-direction: row; */
+    display: flex;
+    width: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-/*
-.spcal:before {
-    position: absolute;
-    top: -7px;
-    left: 9px;
-    display: inline-block;
-    border-right: 7px solid transparent;
-    border-bottom: 7px solid #ccc;
-    border-left: 7px solid transparent;
-    border-bottom-color: rgba(0,0,0,0.2);
-    content: '';
-}
-
-.spcal:after {
-    position: absolute;
-    top: -6px;
-    left: 10px;
-    display: inline-block;
-    border-right: 6px solid transparent;
-    border-bottom: 6px solid #fff;
-    border-left: 6px solid transparent;
-    content: "";
-}
-*/
 
 .spmonthhead {
     font-size: 15px;
@@ -73,31 +50,54 @@
 }
 
 .spmonth {
-    max-width: 210px;
-    width: 210px;
-    /* width: auto; */
+    max-width: 216px;
+    width: 216px;
+    margin: 8px 10px;
     height: auto;
     display: inline-block;
-    padding: 0 10px 10px;
+    padding: 0 6px 6px;
 }
 
+.spweeks {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start; */
+}
+
+.spweek {
+    margin: 0 0 0 0;
+    /* align-self: flex-start; */
+    
+}
+
+/* .spweek_fill {
+    width: 2px;
+    height: auto;
+} */
+
 .spday {
-    float: left;
+    /* float: left; */
+    display: inline-block;
     text-align: center;
-    border: none;
+    vertical-align: top;
+    font-size: 14px;
     width: 28px;
     height: 28px;
     line-height: 28px;
     color: #555;
     cursor: pointer;
-    border-right: 1.5px solid white;
-    border-bottom: 1.5px solid white;
-    font-size: 14px;
+    border: 1px solid white;
+}
+.spday_empty {
+
 }
 
 .sptoday {
     border: 1px solid red;
 }
+
 .startdate,
 .enddate {
     background-color: #50a5e6;
